# src/validations/user.validation.ts
@@ -2,7 +2,7 @@ import Joi from 'joi';
 
 export const updateMeSchema = Joi.object({
   channelName: Joi.string().min(2).max(100),
-  avatarUrl: Joi.string().uri().allow(null),
+  avatarKey: Joi.string().allow(null),
 }).min(1);
 
 export const userIdParamSchema = Joi.object({
